Fix scores undesired wrapping

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -38,11 +38,11 @@ header{
 .scores{
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 70%;
-    gap: 10px;
+    width: 90%;
+    gap: 7px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .grid{
@@ -50,7 +50,7 @@ header{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 10px   ;
+    gap: 10px;
 }
 
 .card{
@@ -83,7 +83,6 @@ header{
 
 @media screen and (max-width: 700px){
     .scores{
-        justify-content: center;
         font-size: 2.5vw;
     }
 
